<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/aqua_little"
    >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/selectDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/selectACity" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="right|top"
            >

            <CheckBox
                android:id="@+id/chooseIfDefault"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/setAsDefault" />

            <ImageView
                android:id="@+id/cancelButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_menu_close_clear_cancel"
                android:background="@color/red_little"
                />
        </LinearLayout>

    </FrameLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="2"
        android:rowCount="2">

        <TextView
            android:id="@+id/provinceTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="0"
            android:text="@string/province" />

        <Spinner
            android:id="@+id/spinnerProvince"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="0"
            android:entries="@array/provinces"
            android:layout_gravity="fill"
            android:popupBackground="@color/aqua_little"
            />

        <TextView
            android:id="@+id/cityTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="1"
            android:text="@string/city" />

        <Spinner
            android:id="@+id/spinnerCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:layout_column="1"
            android:layout_row="1"
            android:popupBackground="@color/aqua_little"
            />

    </GridLayout>

</LinearLayout>