<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/aqua_little"
    >

    <TextView
        android:id="@+id/dialogTitle"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:text="hellp"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:background="@color/black"
        android:gravity="left|center"
        />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="2"
        >

        <TextView
            android:id="@+id/fromView"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/soruce"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_rowSpan="2"
            android:textAlignment="center"
            android:layout_gravity="fill_vertical"
            android:gravity="center"
            android:textColor="@color/black"
            android:background="@color/yellow"

            />

        <Spinner
            android:id="@+id/srcProvSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal"
            android:layout_row="0"

            android:popupBackground="@color/aqua_little" />

        <Spinner
            android:id="@+id/srcCitySpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal"
            android:layout_row="1"
            android:popupBackground="@color/aqua_little" />
    </GridLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="2"
        >

        <TextView
            android:id="@+id/toView"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/destination"
            android:layout_gravity="fill_vertical"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_rowSpan="2"
            android:gravity="center"
            android:textColor="@color/black"
            android:background="#00FF00"
            />

        <Spinner
            android:id="@+id/dstProvSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal"
            android:layout_row="0"
            android:popupBackground="@color/aqua_little" />

        <Spinner
            android:id="@+id/dstCitySpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal"
            android:layout_row="1"
            android:popupBackground="@color/aqua_little" />
    </GridLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="right"
        android:layout_gravity="bottom"
        android:weightSum="6"
        >

        <Button
            android:id="@+id/addButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/buttonAdd"
            android:textColor="@color/black"
            android:background="@color/aqua"

            />

        <Button
            android:layout_marginLeft="8dp"
            android:id="@+id/cancelButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/buttonCancel"
            android:textColor="@color/black"
            android:background="@color/aqua"
            />
    </LinearLayout>

</LinearLayout>